# xmlschema-rs

./: Cargo.toml  PYTHON_MODULES_ANALYSIS.md  README.md  TESTING_STRATEGY.md  TODO.md
examples/: compare.rs  inspect_schema.rs  validate.rs  xml_to_json.rs
examples/data/: book.xsd  book_invalid.xml  book_valid.xml
src/: catalog.rs  documents.rs  error.rs  exports.rs  lib.rs  limits.rs  loaders.rs  locations.rs  main.rs  names.rs  namespaces.rs
src/comparison/: mod.rs  schema_model.rs
src/converters/: badgerfish.rs  base.rs  mod.rs  parker.rs  unordered.rs
src/validators/: assertions.rs  attributes.rs  base.rs  builders.rs  builtins.rs  complex_types.rs  document_validation.rs  elements.rs  exceptions.rs  facets.rs  globals.rs  groups.rs  helpers.rs  identities.rs  mod.rs  models.rs  parsing.rs  particles.rs  schemas.rs  simple_types.rs  validation.rs  wildcards.rs
src/xpath/: mod.rs  parsers.rs  proxy.rs  selectors.rs
tests/: bundle_comparison_tests.rs  cli_tests.rs  comparison_tests.rs  debug_attr.rs  debug_attr2.rs  debug_resolution.rs
tests/bundle_facts/: dita_facts.rs  mod.rs  niso_facts.rs
tests/comparison/: dump_schema.py
tests/comparison/schemas/: book.expected.json  book.xsd
tests/fixtures/: book_invalid.xml  book_simple.xml
tests/include_test/: main.xsd  types.xsd
